# haltr

./: .gitignore  .npmignore  CLAUDE.md  Cargo.toml  README.ja.md  README.md  biome.json  package-lock.json  package.json  tsconfig.json
.catalog/: commands.ts  generator.ts  runner.ts  stories.ts  sync-check.ts
.devcontainer/: postCreateCommand.sh
.github/workflows/: ci.yml  release.yml
npm/: install.js  package.json
src/: main.rs  types.rs  types.ts
src/agents/: main-orchestrator.yaml  rules-agent.yaml  sub-orchestrator.yaml  task-spec-reviewer.yaml  verifier.yaml  worker.yaml
src/catalog/: runner.ts  scenarios.ts
src/commands/: check.rs  check.ts  context.ts  epic.ts  escalate.ts  history-show.ts  history.ts  hook.ts  init.ts  kill-cmd.ts  layout.ts  mod.rs  next.ts  panes.ts  patterns.ts  rule.ts  send.ts  session.rs  session.ts  setup.rs  setup.ts  spawn.ts  start.ts  status.rs  status.ts  step.rs  step.ts  stop.ts  task.rs  task.ts  tui.ts
src/core/: hints.rs  response.rs  session.rs  task_utils.rs
src/lib/: agent-defaults.ts  context-manager.ts  hints.rs  hints.ts  mod.rs  panes-manager.ts  response-builder.ts  runtime.ts  session-manager.ts  session.rs  task-utils.ts  task_utils.rs  timezone.ts  tmux-runtime.ts  tmux.ts  validator.rs  validator.ts  watcher-process.ts  watcher.ts
src/patterns/: implement.md  index.md  research.md  review.md
src/schemas/: config.schema.json  task.schema.json
src/templates/: readme.md  session-start-hook.sh
src/test/: agent-e2e.ts  commands-test.ts  e2e-test.ts  m1-validation.ts  (+15 more)
tests/: integration.rs
(+11 files in other folders)
